--- a/ESP8266_WifiConection/platformio.ini
+++ b/ESP8266_WifiConection/platformio.ini
@@ -12,3 +12,8 @@
 platform = espressif8266
 board = espino
 framework = arduino
+
+lib_deps =
+  # RECOMMENDED
+  # Accept new functionality in a backwards compatible manner and patches
+  mathworks/ThingSpeak @ ^1.5.0
